# robot-operator-training-program

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/training/: COMMAND.md  PRECAUTION.md  README.md  data-collection.md  everyday-todo.md  final-pose.md  init-pose.md  task.md
